# open-rag-mcp

./: .env.example  .gitignore  README.md  run.py  test_web.html
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_group_scoped_api_keys.py  0003_llm_provider_configs.py  0004_group_embedding_configs.py  0005_agent_profiles.py  0006_agent_citations.py
backend/app/: __init__.py  main.py
backend/app/api/: agent_cors.py  dependencies.py  router.py
backend/app/api/routes/: agent_runtime.py  agents.py  api_keys.py  auth.py  document_groups.py  documentation.py  (+6 more)
backend/app/core/: config.py  database.py  migrations.py  security.py
backend/app/mcp/: auth.py  server.py  tools.py
backend/app/models/: __init__.py  agents.py  api_keys.py  documents.py  jobs.py  llm_configs.py  users.py
backend/app/schemas/: agents.py  api_keys.py  auth.py  documentation.py  documents.py  health.py  llm_configs.py
backend/app/services/: agent_runtime.py  agent_sessions.py  agents.py  api_keys.py  auth.py  documentation.py  documents.py  embeddings.py  extraction.py  jobs.py  llm_configs.py  ocr.py  retrieval.py  text_splitter.py  uploads.py
backend/app/static/: open-rag-agent.js
backend/tests/: test_agent_sessions.py  test_agents.py  test_api_keys.py  test_api_workflow.py  test_auth.py  test_document_workflow.py  test_embeddings.py  test_extraction_ocr.py  test_health.py  test_jobs.py  test_llm_configs.py  test_mcp_tools.py  test_retrieval.py  test_upload_workflow.py  test_vector_store_sqlite.py
(+43 files in other folders)
