[project]
name = "open-rag-mcp-backend"
version = "0.1.0"
description = "Backend service for Open RAG MCP."
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.17.0,<2.0.0",
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "pypdf>=6.0.0,<7.0.0",
    "mcp>=1.27.0,<2.0.0",
    "chromadb>=1.0.0,<2.0.0",
    "bcrypt>=4.0.0,<6.0.0",
    "numpy>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.12.0,<1.0.0",
]
ocr = [
    "paddleocr>=3.0.0,<4.0.0",
    "pymupdf>=1.24.0,<2.0.0",
]
embeddings = [
    "sentence-transformers>=5.0.0,<6.0.0",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
